# TangledOrg

./: README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/audit/: page.tsx
app/graph/: page.tsx
app/incidents/: page.tsx
app/issues/: page.tsx
app/login/: page.tsx
app/org/: page.tsx
app/people/: page.tsx
app/policies/: page.tsx
app/repos/: page.tsx
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml
backend/scripts/: seed_code_deps.py  seed_demo_app.py  seed_iso27001.py  seed_real_repos.py
backend/src/: cli.py  config.py
backend/src/agent/: README.md  chat.py
backend/src/agent/nodes/: __init__.py  scan.py
backend/src/agent/tools/: __init__.py  _client.py  audit.py  compliance.py  graph.py  org.py  policy.py  tangled.py
backend/src/appview/: app.py  client_metadata.py  pr_watcher.py  session.py
backend/src/appview/routes/: api.py  auth.py
backend/src/atproto_client/: __init__.py  client.py
backend/src/models/: __init__.py  audit.py  base.py  compliance.py  graph.py  org.py  policy.py
components/auth/: AuthProvider.tsx
components/compliance/: ComplianceScore.tsx  ControlRow.tsx  MergeGateBadge.tsx  RiskBadge.tsx
components/graph/: GraphPreview.tsx
components/layout/: Header.tsx  Shell.tsx  Sidebar.tsx
components/theme/: ThemeProvider.tsx
components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx
docs/plan/: 00-overview.md  01-architecture.md  02-tech-stack.md  03-lexicons.md  (+5 more)
lib/: api.ts  mock-data.ts  utils.ts
types/: index.ts
(+8 files in other folders)
