[project]
name = "tangled-org"
version = "0.1.0"
description = "Protocol-native governance, compliance, and code-safety layer for Tangled"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.55",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "click>=8.1",
    "rich>=14.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "aiosqlite>=0.21",
    "atproto-oauth-py>=0.1.0",
]

[project.optional-dependencies]
agent = [
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.12",
]

[project.scripts]
tangled-org = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
